[gd_scene load_steps=4 format=3 uid="uid://dmmxh57pqk4iw"]

[ext_resource type="Script" path="res://Scenes/Utils/TextChat/ChatBar.gd" id="1_qhxb3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gsw8w"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0, 0, 0, 0.196078)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x2t61"]
bg_color = Color(0, 0, 0, 0.392157)

[node name="ChatBar" type="Control"]
process_mode = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qhxb3")

[node name="ChatBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -324.925
offset_right = 616.0
offset_bottom = -7.03503
grow_vertical = 0
theme_override_constants/separation = 0

[node name="ChatViewBox" type="PanelContainer" parent="ChatBox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 6.0
theme_override_styles/panel = SubResource("StyleBoxFlat_gsw8w")
metadata/_edit_group_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="ChatBox/ChatViewBox"]
layout_mode = 2

[node name="Control" type="Control" parent="ChatBox/ChatViewBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ConvoContainer" type="VBoxContainer" parent="ChatBox/ChatViewBox/ScrollContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="ChatEntryBox" type="PanelContainer" parent="ChatBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_x2t61")
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="ChatBox/ChatEntryBox"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 12
text = "Team : "
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="ChatBox/ChatEntryBox"]
layout_mode = 2

[node name="ChatQuickView" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -46.0
offset_right = 600.0
grow_vertical = 0
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_x2t61")
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="ChatQuickView"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 12
text = "Team : "
vertical_alignment = 1
